Removed writeString from server